--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ plugins {
 ext {
     artifactId = "hydride-java"
     groupId = "co.libly"
-    version = '1.1.1'
-    description = "Lazysodium (Java) makes it effortless for Java " +
-            "developers to get started with Libsodium's cryptography."
+    version = '1.1.2'
+    description = "Hydride is a Java encryption library that binds against Libhydrogen which provides " +
+            " simple cryptography that is compatible on a wide range of platforms."
 }
 
 
