--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id 'maven'
     id 'maven-publish'
     id "com.jfrog.bintray" version "1.8.4"
+    id 'org.jetbrains.kotlin.jvm' version '1.4.30-RC'
 }
 
 ext {
@@ -35,11 +36,13 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
     implementation "net.java.dev.jna:jna:5.3.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 
@@ -181,7 +184,6 @@ model {
 tasks.withType(Test) {
     // a collection to track failedTests
     ext.failedTests = []
-
     afterTest { descriptor, result ->
         if (result.resultType == TestResult.ResultType.FAILURE) {
             String failedTest = "${descriptor.className}::${descriptor.name}"
@@ -189,7 +191,6 @@ tasks.withType(Test) {
             failedTests << [failedTest]
         }
     }
-
     afterSuite { suite, result ->
         if (!suite.parent) { // will match the outermost suite
             // logs each failed test
@@ -200,5 +201,15 @@ tasks.withType(Test) {
                 }
             }
         }
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
